jena-shex/src/test/files/spec/negativeSyntax/PNAME_NS-dot-at-end-undeclared.shex
# PN_PREFIX with undeclared FULL STOP in last character
# source: turtle-syntax-bad-missing-ns-dot-end.ttl
PREFIX valid: <http://a.example/ns/valid#>
PREFIX invalid: <http://a.example/ns/invalid#>

valid:s valid:p invalid.:o .
